# NanoLogicLM

./: .gitignore  COLAB_GUIDE.md  README.md  data_generation.ipynb  generate_dataset.py  generate_dataset_v2.py  generate_dataset_v3.py  inference.py  main.py  pyproject.toml  train.py
data/scripts/: augment.py  clean.py  preprocess.py  train_tokenizer.py  verify.py
demo/: app.py  templates.py
models/tokenizer/: tokenizer.json
notebooks/: Start_Training_Colab.ipynb
scripts/: pack_project.py
src/: __init__.py
src/evaluation/: __init__.py  benchmark.py  metrics.py  truth_table.py
src/model/: attention.py  block.py  config.py  ffn.py  rmsnorm.py  transformer.py
src/tokenizer/: __init__.py  special_tokens.py  tokenizer.py
src/training/: __init__.py  dataset.py  lit_module.py
